      (.rpg file/.rpgdir) [Ralph]
    * You can now pass arguments to the newgame and loadgame scripts by
      giving extra arguments to "resetgame" and "loadfromslot" [Ralph]
    * "reparent to npc" and "reparent to hero" convenience functions
      [James]
    * Added "show new game" argument to "load menu" command [Ralph]
    * "get battle countdown" and "set battle countdown" [Ralph]

  * Changes

  * Bugfixes
    * In old games, attacks with enemy type-killer bits wrongly counted
      as elemental for the purpose of spawning. This fix is only
      applied if the game has not been edited since Ypsiliform. [James]
    * The party leader will always draw on top of other heroes with the
      same Y position, and when heroes and NPCs are on the same layer,
      on top of NPCs that have the same Y position (instead of being
      layered unpredictably) This is most noticeable with vehicles that
      do not hide the leader. [Ralph, James]
    * "use item in slot" was not immediately updating item ownership
      tags [James]
    * Fix broken self-targeting on-death-bequest attacks [James]
    * gfx_directx: fixed incorrect positioning of the mouse cursor when
      the window was stretched or maximised, which caused problems with
      tile cursor movement in the tile browser and tile cutter [Ralph]
    * Bug 2006: gfx_directx: major slowdown after switching to another
      program while a joystick is plugged in [Ralph]
    * If you skipped the title instantly by pressing a key at the wrong
      moment then the load menu would have a blacked-out palette [Ralph]
    * Harm tiles didn't work if there are 'gaps' in the active party
      (caterpillar rank and party slots aren't equal) and caterpillar
      party was disabled [Ralph]
    * The Battle Formation Set menu miscalculated the number of steps
      until a battle occurs (it was too low). Also added average [Ralph]

  * Stuff Only Developers Will Notice