@@ -643,9 +643,9 @@ define function, begin
 620,rungame,1,0               # Run another game (string id)
 621,getbattlecountdown,0      # Get random battle counter
 622,setbattlecountdown,1,100  # Set random battle counter
-623,checkwallcollisionx,7,0,0,0,0,20,20,1  # Check for wall collision (pixel x, pixel y, width, height, xgo, ygo, walls_over_edges)
-624,checkwallcollisiony,7,0,0,0,0,20,20,1  # Check for wall collision (pixel x, pixel y, width, height, xgo, ygo, walls_over_edges)
-625,moveslicewithwallchecking,4,0,0,0,1    # Move a slice by xgo,ygo or until it hits a wall (sl, xgo, ygo, walls_over_edges)
+623,checkwallcollisionx,6,0,0,0,0,20,20  # Check for wall collision (pixel x, pixel y, width, height, xgo, ygo)
+624,checkwallcollisiony,6,0,0,0,0,20,20  # Check for wall collision (pixel x, pixel y, width, height, xgo, ygo)
+625,moveslicewithwallchecking,3,0,0,0    # Move a slice by xgo,ygo or until it hits a wall (sl, xgo, ygo)
 # Don't forget to update maxScriptCmdID in const.bi when adding new commands
 end
 
